Reorganice estructura de carpetas y codigo